[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scenes/Player/Camera.gd" type="Script" id=1]

[node name="Camera" type="Camera2D"]
z_index = 1
current = true
drag_margin_left = 0.0
drag_margin_top = 0.0
drag_margin_right = 0.0
drag_margin_bottom = 0.0
script = ExtResource( 1 )

[node name="Shake_Tween" type="Tween" parent="."]

[node name="Frequency" type="Timer" parent="."]

[node name="Duration" type="Timer" parent="."]
[connection signal="timeout" from="Frequency" to="." method="_on_Frequency_timeout"]
[connection signal="timeout" from="Duration" to="." method="_on_Duration_timeout"]
